# Umriss-python

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
images/page1/: page1-accurate.svgz  page1-ccitt4.tif  page1-dp-1.svgz  page1-exact.svgz
images/page2/: page2-accurate.svgz  page2-ccitt4.tif  page2-dp-1.svgz  page2-exact.svgz
images/page3/: page3-accurate.svgz  page3-ccitt4.tif  page3-dp-1.svgz  page3-exact.svgz
umriss/: __init__.py  __main__.py  bitmap.py  bounding_box.py  contour.py  document.py  drawing.py  glyph.py  numpy_tools.py  types.py  unification.py  utils.py
umriss/approximation/: __init__.py  abstract.py  accurate_polygon.py  contour_tools.py  douglas_peucker.py  douglas_peucker_polygon.py  exact.py  silly_cubic.py
umriss/image/: __init__.py  exact_contour.py
umriss/svg/: __init__.py  debug_colors.py  element.py  group.py  path.py  path_data.py  svg_document.py
umriss/tracing/: __init__.py  abstract.py  binarized_exact.py  binarized_polygon.py  grayscale_polygon.py
