[project]
name = "umriss"
version = "0.1.0"
description = "Traces black-and-white bitmaps into SVG."
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.2",
    "opencv-python>=4.7.0.68",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "nptyping",
]

[project.urls]
repository = "https://github.com/formicant/Umriss"
