[project]
name = "umriss"
version = "0.1.0"
description = "Traces black-and-white bitmaps into SVG."
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.2",
    "scipy>=1.10.0",
    "opencv-python>=4.7.0.68",
    "scikit-image>=0.19.3",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "nptyping",
]

[project.urls]
repository = "https://github.com/formicant/Umriss"
